...
    <!-- Menu -->
    <string name="action_share">Share</string>

    <!-- Spanned Text Fragment -->
    <string name="stf_multiple_spans_plain_text">There are many ways to show alerts in-app in Android. You can show an AlertDialog or a Toast, for example.</string>
    <string name="stf_multiple_spans_part_1">There are many ways to show alerts in-app in Android. You can show an AlertDialog o</string>
    <string name="stf_alert_dialog_link_text">AlertDialog</string>
    <string name="stf_multiple_spans_part_2">r a Toast, for example.</string> <!-- Broken in the middle because android trims resource strings -->
    <string name="stf_toast_link_text">Toast</string>
    <string name="stf_single_span_plain_text">You can also post a Notification to the drawer.</string>
    <string name="stf_notification_link_text">Notification</string>
    <string name="stf_toast_text">A Toast!</string>
    <string name="stf_alert_text">An AlertDialog!</string>
    <string name="stf_alert_close">OK</string>
    <string name="stf_notification_title">Spanned Text Example</string>
    <string name="stf_notification_text">A Notification!</string>

    <!-- Immersive Fragment -->
    <string name="if_homer">No TV And No Beer Make Homer Something Something</string>
...
